# esp32c3-devkitm1

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml
.cargo/: config
_pkg/esp32c3-hal/: Cargo.toml  build.rs  memory.x
_pkg/esp32c3-hal/src/: delay.rs  gpio.rs  lib.rs  time.rs
src/: main.rs
